Creacion de los service y controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=parcial
+spring.data.mongodb.uri=mongodb+srv://cvds:cvds@clusterparcialmongo.w4am2hs.mongodb.net/?retryWrites=true&w=majority&appName=ClusterParcialMongo
+server.port=8080
