--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=parcial
-spring.data.mongodb.uri=mongodb+srv://cvds:cvds@clusterparcialmongo.w4am2hs.mongodb.net/parcial?retryWrites=true&w=majority&appName=ClusterParcialMongo
+spring.application.name=parcialT3
+spring.data.mongodb.uri=mongodb+srv://cvds:cvds@cluster0.xitmppz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 server.port=8080
